Последняя версия сайта

--- a/index.html
+++ b/index.html
@@ -284,24 +284,74 @@
                             structures,
                             to generate Lorem Ipsum which looks reasonable.</h4>
                     </div>
-                    <div class="review-content">
-                        <div class="review-text">
-                            <p>Latin words, combined with a handful of model sentence
-                                structures, to generate Lorem Ipsum which looks reasonable.
-                                The generated Lorem Ipsum is therefore always free from
-                                repetition injected humour, or non-characteristic words etc.
-                                Contrary to popular belief, Lorem Ipsum is not simply random text.
-                                It has roots in a piece of classical Latin literature from 45 BC,
-                                making it over 2000 years old. Richard McClintock, a Latin professor
-                                at Hampden-Sydney College in Virginia, looked up one of the more
-                                obscure Latin words, consectetur, from a Lorem Ipsum passage,
-                                and going through the cites of the word in classical literature,
-                                discovered</p>
+                    <div class="review-slider-wrapper">
+                        <input type="radio" name="radio-btn" id="radio-btn-one" checked>
+                        <input type="radio" name="radio-btn" id="radio-btn-two">
+                        <input type="radio" name="radio-btn" id="radio-btn-three">
+
+                        <div class="slider">
+                            <div class="review-slides slide-one">
+                                <div class="review-content">
+                                    <div class="review-text">
+                                        <p>Latin words, combined with a handful of model sentence
+                                            structures, to generate Lorem Ipsum which looks reasonable.
+                                            The generated Lorem Ipsum is therefore always free from
+                                            repetition injected humour, or non-characteristic words etc.
+                                            Contrary to popular belief, Lorem Ipsum is not simply random text.
+                                            It has roots in a piece of classical Latin literature from 45 BC,
+                                            making it over 2000 years old. Richard McClintock, a Latin professor
+                                            at Hampden-Sydney College in Virginia, looked up one of the more
+                                            obscure Latin words, consectetur, from a Lorem Ipsum passage,
+                                            and going through the cites of the word in classical literature,
+                                            discovered
+                                        </p>
+                                    </div>
+                                    <div class="review-author">
+                                        <img src="img/avatar.png" alt="" width="" height="">
+                                        <p class="review-name">Terens Smith/</p>
+                                        <p class="review-prof">CEO AntalAgro</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="review-slides slide-two">
+                                <div class="review-content">
+                                    <div class="review-text">
+                                        <p>Latin words, combined with a handful of model sentence
+                                            structures, to generate Lorem Ipsum which looks reasonable.
+                                            The generated Lorem Ipsum is therefore always free from
+                                            repetition injected humour, or non-characteristic words etc.
+                                            Contrary to popular belief, Lorem Ipsum is not simply random text.
+                                        </p>
+                                    </div>
+                                    <div class="review-author">
+                                        <img src="img/avatar.png" alt="" width="" height="">
+                                        <p class="review-name">Terens Smith/</p>
+                                        <p class="review-prof">CEO AntalAgro</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="review-slides slide-three">
+                                <div class="review-content">
+                                    <div class="review-text">
+                                        <p>Latin words, combined with a handful of model sentence
+                                            structures, to generate Lorem Ipsum which looks reasonable.
+                                        </p>
+                                    </div>
+                                    <div class="review-author">
+                                        <img src="img/avatar.png" alt="" width="" height="">
+                                        <p class="review-name">Terens Smith/</p>
+                                        <p class="review-prof">CEO AntalAgro</p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <div class="review-author">
-                            <img src="img/avatar.png" alt="" width="" height="">
-                            <p class="review-name">Terens Smith/</p>
-                            <p class="review-prof">CEO AntalAgro</p>
+
+                        <div class="navigation">
+                            <label for="radio-btn-one" class="bar"></label>
+                            <label for="radio-btn-two" class="bar"></label>
+                            <label for="radio-btn-three" class="bar"></label>
                         </div>
                     </div>
                 </div>
@@ -325,8 +375,8 @@
                                     <p class="date-mounth">Nov</p>
                                 </div>
                                 <div class="blog-text">
-                                    <p class="blog-title">Organic food/tips & guides</p>
-                                    <p class="blog-description">Tips for Ripening your Fruit</p>
+                                    <a class="blog-title">Organic food/tips & guides</a>
+                                    <a class="blog-description">Tips for Ripening your Fruit</a>
                                 </div>
                             </div>
                         </li>
@@ -339,8 +389,8 @@
                                     <p class="date-mounth">Nov</p>
                                 </div>
                                 <div class="blog-text">
-                                    <p class="blog-title">Diet/organic food</p>
-                                    <p class="blog-description">Health Benefits of a Raw Food</p>
+                                    <a class="blog-title">Diet/organic food</a>
+                                    <a class="blog-description">Health Benefits of a Raw Food</a>
                                 </div>
                             </div>
                         </li>
@@ -353,8 +403,8 @@
                                     <p class="date-mounth">Oct</p>
                                 </div>
                                 <div class="blog-text">
-                                    <p class="blog-title">Diet/organic food</p>
-                                    <p class="blog-description"> Superfoods you should be eating</p>
+                                    <a class="blog-title">Diet/organic food</a>
+                                    <a class="blog-description"> Superfoods you should be eating</a>
                                 </div>
                             </div>
                         </li>
@@ -471,8 +521,8 @@
                 </div>
             </div>
         </div>
-            <img class="map" src="img/map.jpg" alt="" width="615" height="503">
-            <img class="marker" src="img/marker.png" width="" height="">
+        <img class="map" src="img/map.jpg" alt="" width="615" height="503">
+        <img class="marker" src="img/marker.png" width="" height="">
     </footer>
 </body>
 
